# pythonic-opensource-mds

./: .env.default  .gitignore  .gitmodules  .prettierrc.toml  LICENSE  README.md  docker-compose-marquez.yaml  docker-compose-supabase.yaml  docker-compose.yaml  pyproject.toml
backend/: README.md
doc/: comparativo-backend.md  comparativo-bi.md  comparativo-orquestracao.md  eventos-pgmq.md  grafana-stack.md  map.excalidraw
ingestion/: README.md
orchestration/: README.md  prefect.toml  pyproject.toml
orchestration/flows/: scanear_event.py  scanear_flow.py  tutorial_orientado_evento.py  tutorial_orientado_evento_flow.py
orchestration/repository_flows/: flow.py  repository_sample.yaml
orchestration/scanear_choreography/: scanear_automation.py  scanear_event.py  scanear_flow.py
orchestration/tutorial/: tutorial_docker_hello_world_flow.py  tutorial_snakesay_flow.py
orchestration/tutorial_flows/: tutorial_orientado_evento_flow.py
orchestration/utils/: client_factory.py  prefect.py
tests/: sample_data_org.sql
transformation/prefect_core/: README.md  pyproject.toml
transformation/prefect_core/flows/: tutorial_marquez_github.py  tutorial_snakesay_flow.py
ui/web/: package-lock.json  package.json  vite.config.ts
ui/web/project.inlang/: project_id
ui/web/src/routes/: +page.svelte
