[project]
name = "orchestration"
version = "0.1.0"
description = "build, monitor, and scale critical data workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backend-link",
    "icecream>=2.1.4",
    "infra-env",
    "numpy>=2.2.4",
    "openlineage-python>=1.31.0",
    "prefect[docker]>=3.3.3",
    "supabase>=2.15.0",
    "tabulate>=0.9.0",
    "tutorial-snakesay",
    "warehouse-objects",
]

[tool.uv.sources]
warehouse-objects = { workspace = true }
tutorial-snakesay = { workspace = true }
infra-env = { workspace = true }
backend-link = { workspace = true }
