[project]
name = "prefect-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infra-env",
    "prefect[docker]>=3.3.3",
    "supabase>=2.15.0",
    "tabulate>=0.9.0",
    "tutorial-snakesay",
    "warehouse-objects",
]

[tool.uv.sources]
warehouse-objects = { workspace = true }
tutorial-snakesay = { workspace = true }
infra-env = { workspace = true }
